feat: integrate Spring Cache with @Cacheable for read operations